tests/errors/field_does_not_exist.sbr
struct Person {
  name: string
}

let main = () => {
  let p = Person { name: "Nicholas" };
  printInt(p.age);
}